Practica/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    io.app.service: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.app.service: adminer
  template:
    metadata:
      labels:
        io.app.service: adminer
    spec:
      containers:
        - image: adminer
          name: adminer
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
