Practica/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    io.app.service: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.app.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.app.service: web
    spec:
      containers:
      - name: web
        image: bryyyan/practica_contendores:appweb-k8s-v2
        ports:
          - containerPort: 5000
            protocol: TCP
        command:
          - sh
          - -c
          - sleep 10 && python app.py
        volumeMounts:
          - mountPath: /app/logs
            name: web-claim0
      imagePullSecrets:
        - name: docker-secret      
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
