Practica/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.k8s.io: adminer
  name: adminer-srv
spec:
  ports:
    - protocol: TCP
      port: 50
      targetPort: 8080
  selector:
    app.k8s.io: adminer
