Practica/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.k8s.io: db
  name: db-service
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app.k8s.io: db
