Practica/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    # - name: "5000"
    - port: 5000 # Puerto del contenedor escucha
      targetPort: 5000 # Puerto interno del contenedor
  selector:
    app: web
