Practica/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.k8s.io: web
  name: web-igrss
spec:
  rules:
  - host: web-127-0-0-1.nip.io
    http:
      paths:
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
